tests/errors/test_16.x
// Main function may not have any parameters

fn main(x: i64) -> void {

}